chapter django basic

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             </table>
             <p class="text-gray-700 mb-4" style="text-align: justify">
               En esta presentación, exploraremos el uso de contenedores con
-              Docker para el desarrollo de software.
+              Docker para el desarrollo de software, volumenes para persistir los datos.
             </p>
             <a
               href="presentations\05-docker\index.html"
