--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               Docker para el desarrollo de software, volumenes para persistir los datos.
             </p>
             <a
-              href="presentations\05-docker\index.html"
+              href="presentations/05-docker/index.html"
               target="_blank"
               class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300"
               >Ver presentación</a
@@ -303,7 +303,7 @@
               configuración inicial del proyecto, apps, settings.
             </p>
             <a
-              href="presentations\06-django\index.html"
+              href="presentations/06-django/index.html"
               target="_blank"
               class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300"
               >Ver presentación</a
