--- a/actividades.html
+++ b/actividades.html
@@ -95,7 +95,7 @@
           <h3 class="text-2xl font-semibold mb-4">Proyectos con Python</h3>
           <img src="img/python-logo.png" alt="Python" class="mx-auto w-20 h-20 mb-4">
           <p class="text-gray-700 mb-4">En esta asignación, profundizará en los conceptos de Python y trabajará en proyectos más complejos.</p>
-          <a href="https://classroom.github.com/a/ARmKG9ax" target="_blank"
+          <a href="https://classroom.github.com/a/kYpc3YqW" target="_blank"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             Asignación</a>
         </div>
